[package]
name = "netoken"
version = "0.1.0"
authors = ["jim luo"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../libbpf-rs" }
libc = "0.2"
plain = "0.2"
nix = { version = "0.24", default-features = false, features = ["net", "user"] }
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }

[build-dependencies]
libbpf-cargo = { path = "../libbpf-cargo" }
